TYCHO-29 enable automated unit tests